--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,4 +1,5 @@
 name: Continuous Deployment
+
 on:
   workflow_run:
     workflows: ["Continuous Integration"]
@@ -8,12 +9,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Deployment To Hugging Face
+      - name: Deployment to Hugging Face
         env:
           HF: ${{ secrets.HF }}
         run: make deploy HF=$HF
