--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,30 +1,41 @@
 name: Continuous Integration
+
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
-  
+
 permissions: write-all
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: iterative/setup-cml@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup CML
+        uses: iterative/setup-cml@v2
+
       - name: Install Packages
         run: make install
-      - name: Format
+
+      - name: Format code
         run: make format
-      - name: Train
+
+      - name: Train model
         run: make train
-      - name: Evaluation
+
+      - name: Evaluate model
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: make eval
+
       - name: Update Branch
+        # Définir les valeurs directement ou via secrets GitHub
         env:
-          NAME: ${{ secrets.USER_NAME }}
-          EMAIL: ${{ secrets.USER_EMAIL }}
+          NAME: ${{ secrets.USER_NAME || 'ikramabhih' }}
+          EMAIL: ${{ secrets.USER_EMAIL || 'i.abhih9312@uca.ac.ma' }}
         run: make update-branch USER_NAME=$NAME USER_EMAIL=$EMAIL
